# coh2stats

./: .flake8  .gitignore  LICENSE  Pipfile  README.md  app.py  config-example.json  message.txt  pyproject.toml  relic_plz.py  requirements-dev.txt  requirements.txt  result.html
assets/: main.css  tidy.css
coh2stats/: __init__.py  config.py  dao.py  mail.py
coh2stats/assets/: main.css
coh2stats/cron_scripts/: get_personalstats.py  get_weeklystats.py  publish_weeklystats.py
coh2stats/personalstats/tasks/: __init__.py  get_personalstats.py
coh2stats/stats/: routes.py
coh2stats/templates/: results_1v1.html  results_teams.html
coh2stats/weeklystats/: routes.py  utils.py
coh2stats/weeklystats/tasks/: __init__.py  get_weeklystats.py  publish_weeklystats.py
cron-scripts/: get_weekly_stats.py  publish_weeklystats.py
stats/: routes.py  utils.py
templates/: results_1v1.html  results_teams.html
