[tool.poetry]
name = "coh2stats"
version = "0.1.0"
description = ""
authors = ["George Zed <georlema@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.6"
flask = "^1.1.1"
httpx = "^0.7.8"
pymongo = "^3.9.0"
facebook-sdk = "^3.1.0"
huey = "^2.1.3"
gunicorn = "19.9.0"
meinheld = "^1.0.1"
pyppeteer = "^0.0.25"

[tool.poetry.dev-dependencies]
ipdb = "^0.12.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
