[tool.poetry]
name = "coh2stats"
version = "0.1.0"
description = ""
authors = ["George Zed <georlema@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.7"
flask = "^1.1.2"
httpx = "^0.16.1"
pymongo = "^3.11.2"
facebook-sdk = "^3.1.0"
huey = "^2.2.0"
gunicorn = "20.0.4"
meinheld = "^1.0.2"
pyppeteer = "^0.2.5"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
